# project-tracker

./: .env.example  .gitignore  Cargo.toml  justfile
.claude/: settings.local.json
crates/backend/: Cargo.toml
crates/backend/src/: app.rs  error.rs  lib.rs  main.rs
crates/backend/src/db/: mod.rs  project_repository.rs  task_repository.rs  traits.rs
crates/backend/src/dto/: mod.rs  project_dto.rs  task_dto.rs
crates/backend/src/handlers/: mod.rs  project_handler.rs  project_handlers.rs  task_handlers.rs
crates/backend/src/routes/: health_routes.rs  mod.rs  project_routes.rs  projects.rs  task_routes.rs
crates/backend/src/services/: mod.rs  project_service.rs  project_services.rs  task_services.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  main.rs
crates/cli/src/handlers/: mod.rs  project.rs
crates/cli/src/models/: form_state.rs  mod.rs
crates/cli/src/ui/: mod.rs
crates/db/: Cargo.toml
crates/db-mock/: Cargo.toml
crates/db-mock/schemas/: task.surql
crates/db-mock/src/: database.rs  error.rs
crates/db/schemas/: project.surql  task.surql
crates/db/src/: database.rs  error.rs  lib.rs  project_repository.rs  task_repository.rs
crates/db/tests/: project_repository_tests.rs  task_repository_tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: id.rs  lib.rs
crates/domain/src/builders/: mod.rs  person_builder.rs  project_builder.rs  tag_builder.rs  task_builder.rs
crates/domain/src/factories/: mod.rs  person_factory.rs  project_factory.rs  tag_factory.rs  task_factory.rs
crates/domain/src/models/: mod.rs  person.rs  project.rs  project_builder.rs  schedulable.rs  tag.rs  task.rs
crates/domain/tests/models/: mod.rs  person_tests.rs  project_tests.rs  schedulable_tests.rs  tag_tests.rs  task_tests.rs
crates/frontend/: Cargo.toml
(+9 files in other folders)
