[package]
name = "project-tracker-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
project-tracker-core = { path = "../domain" }
project-tracker-db = { path = "../db" }
project-tracker-db-mock = { path = "../db-mock" }
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
