[package]
name = "project-tracker-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
project-tracker-core = { path = "../domain" }
project-tracker-db = { path = "../db" }
project-tracker-db-mock = { path = "../db-mock" }
axum = { version = "0.8.3" }
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.5.2" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0" }
