[package]
name = "project-tracker-db"
version = "0.1.0"
edition = "2024"

[dependencies]
project-tracker-core = { path = "../domain" }
surrealdb = { version = "2.2.2", features = ["kv-mem"] }
async-trait = { version = "0.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.38", features = ["full"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
