[package]
name = "project-tracker-core"
version = "0.1.0"
edition = "2024"
description = "A simple project tracker app, to track my programming projects and other hobbies"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
ulid = { version = "1.2.1" }
serde = { version = "1.0.219" }
log = { version = "0.4.27" }
